add a new order based on inventory stock, http request using webflux with Mono & Flux
add a new order based on inventory stock, http request to service Inventory using webflux with Mono & Flux